--- a/note-app/src/assets/main.css
+++ b/note-app/src/assets/main.css
@@ -181,3 +181,13 @@ body {
 .rs__form-save-btn:hover {
 	background-color: #17594A;
 }
+
+.rs__content-note{
+    width: 100%;
+	height: 35px;
+	border: 0;
+	outline: 0;
+	padding: 5px 10px;
+	font-size: 0.8rem;
+	font-weight: 600;
+}
